--- a/www/less/sections.less
+++ b/www/less/sections.less
@@ -1,41 +1,37 @@
-@tunnelMargin: 30px;
-
-#sections {
+#green-park {
   overflow: hidden;
 }
 
-#sections, section {
+#green-park,
+#green-park > section,
+#green-park .front,
+#green-park .back {
+  position:absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
-  position:absolute;
 }
 
-section {
-  nav, header {
-    z-index: 1;
-    position: relative;
+#green-park .front {
+  z-index: 1;
+}
+
+#green-park .back {
+  z-index: 0;
+}
+
+
+#green-park .tunnel .container {
+    margin: 0 15px;
+}
+
+#green-park .start {
+  canvas:nth-child(1) {
+    .pull-left;
   }
-  canvas {
-    position: absolute;
-    z-index: 0;
-    top: 0;
-  }
-  &.start canvas:nth-child(1) {
-    left: 0;
-  }
-  &.start canvas:nth-child(2) {
-    right: 0;
-  }
-  &.tunnel {
-    nav {
-      margin-top: @tunnelMargin;
-      .picadilly {
-        margin-left: @tunnelMargin;
-      }
-      .jubilee {
-        margin-right: @tunnelMargin;
-      }
-    }
+  canvas:nth-child(2) {
+    .pull-right;
   }
 }
 
